# public/openapi.json
@@ -246,202 +246,6 @@
         }
       }
     },
-    "/case-studies": {
-      "get": {
-        "operationId": "get-case-studies",
-        "summary": "GET /api/case-studies",
-        "description": "",
-        "tags": [
-          "Case-studies"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      },
-      "post": {
-        "operationId": "post-case-studies",
-        "summary": "POST /api/case-studies",
-        "description": "",
-        "tags": [
-          "Case-studies"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
-    "/case-studies/{id}": {
-      "get": {
-        "operationId": "get-case-studies-{id}",
-        "summary": "GET /api/case-studies/[id]",
-        "description": "",
-        "tags": [
-          "Case-studies"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      },
-      "put": {
-        "operationId": "put-case-studies-{id}",
-        "summary": "PUT /api/case-studies/[id]",
-        "description": "",
-        "tags": [
-          "Case-studies"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      },
-      "delete": {
-        "operationId": "delete-case-studies-{id}",
-        "summary": "DELETE /api/case-studies/[id]",
-        "description": "",
-        "tags": [
-          "Case-studies"
-        ],
-        "parameters": [],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
-    "/case-studies/{id}/image": {
-      "get": {
-        "operationId": "get-case-studies-{id}-image",
-        "summary": "GET /api/case-studies/[id]/image",
-        "description": "",
-        "tags": [
-          "Case-studies"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      },
-      "post": {
-        "operationId": "post-case-studies-{id}-image",
-        "summary": "POST /api/case-studies/[id]/image",
-        "description": "",
-        "tags": [
-          "Case-studies"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      },
-      "delete": {
-        "operationId": "delete-case-studies-{id}-image",
-        "summary": "DELETE /api/case-studies/[id]/image",
-        "description": "",
-        "tags": [
-          "Case-studies"
-        ],
-        "parameters": [],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
     "/cases/{id}": {
       "get": {
         "operationId": "get-cases-{id}",
@@ -2768,81 +2572,6 @@
         }
       }
     },
-    "/public/case-studies": {
-      "get": {
-        "operationId": "get-public-case-studies",
-        "summary": "GET /api/public/case-studies",
-        "description": "",
-        "tags": [
-          "Public"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
-    "/public/assurance-case/{id}": {
-      "get": {
-        "operationId": "get-public-assurance-case-{id}",
-        "summary": "GET /api/public/assurance-case/[id]",
-        "description": "",
-        "tags": [
-          "Public"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
-    "/public/case-studies/{id}": {
-      "get": {
-        "operationId": "get-public-case-studies-{id}",
-        "summary": "GET /api/public/case-studies/[id]",
-        "description": "",
-        "tags": [
-          "Public"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
     "/public/discover/{slug}": {
       "get": {
         "operationId": "get-public-discover-{slug}",
@@ -2850,31 +2579,6 @@
         "description": "",
         "tags": [
           "Public"
-        ],
-        "parameters": [],
-        "responses": {
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "403": {
-            "$ref": "#/components/responses/403"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
-    "/published-assurance-cases": {
-      "get": {
-        "operationId": "get-published-assurance-cases",
-        "summary": "GET /api/published-assurance-cases",
-        "description": "",
-        "tags": [
-          "Published-assurance-cases"
         ],
         "parameters": [],
         "responses": {
